Fixed text align in .card and .skills

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ header .profile-image:hover {
   padding: 20px 40px 40px;
   font-family: Copperplate, Papyrus, fantasy;
   max-width: 500px;
-  text-align: left;
+  text-align: justify;
   background: #fff;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
@@ -109,7 +109,7 @@ header .profile-image:hover {
 
 ul.skills {
   padding: 0;
-  text-align: center;
+  text-align: justify;
 }
 
 .skills li {
